kubernetes/infra/storage/namespace.yaml
# kubernetes/infra/storage/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
